tests/run/error_ptr_leak.out
tests/run/error_ptr_leak.em:10:5: error: 'f' is a 'Ptr' opened but not closed on this path
tests/run/error_ptr_leak.em:10:5: help: a 'Ptr' is a linear FFI handle with no destructor — close it on every path (e.g. fclose(it)) or return it to transfer ownership to the caller
tests/run/error_ptr_leak.em:9:5: note: opened here
